css/games.css
:root {
    /* COLORS */
    --primary-text-color: #FFFFFF;

    --bg: #151515;
    --menu-bg: #2A2A2A;
    --menu-separator: #515151;

    /* Icons from the view options */
    --enabled-bg: #515151;
    --enabled-inside: #FFFDF5;
    --disabled-bg: #303030;
    --disabled-inside: #515151;

    --card-bg: #303030;

    --footer-gradient: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));

    /* MARGINS */
    --margin-l-r: 40px;
}

.light-mode {
    --card-bg: #FFFFFF;

    /* Icons from the view options */
    --enabled-bg: #939393;
    --enabled-inside: #515151;
    --disabled-bg: #D8D8D8;
    --disabled-inside: #C4C4C4;

    --bg: #F0F0F0;
    --menu-bg: white;
    --menu-separator: #E4E4E4;

    --primary-text-color: #515151;

    --footer-gradient: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.8));
}

html {
    overflow-x: hidden;
    overflow-y: hidden;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Exo';
    font-style: normal;
    font-weight: 400;
    font-size: 0.938rem;
    line-height: 20px;
}

body {
    width: 100vw;
    height: 100vh;
}

.background-modal {
    display: none;

    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;

    z-index: 5;

    background-color: black;
    opacity: 0.3;
}

/*
    ##########################################################################

    MENU FOR SMALL DEVICES STYLING.

    ##########################################################################
*/

.menu-sm-devices {
    display: none;

    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: -1000px;

    z-index: 30;

    opacity: 0;
    background-color: var(--menu-bg);
    -webkit-animation: slide 0.2s forwards;
    animation: slide 0.2s forwards;
}

/* Animation code from https://stackoverflow.com/questions/16989585/css-3-slide-in-from-left-transition */
@-webkit-keyframes slide {
    100% { 
        left: 0; 
        opacity: 1;
    }
}

@keyframes slide {
    100% { 
        left: 0; 
        opacity: 1;
    }
}

.menu__user-close {
    display: flex;
    justify-content: space-between;
    align-items: center;

    margin-top: 16px;
    margin-left: 16px;
}

.menu__user {
    color: var(--primary-text-color);
    display: flex;
}

.user__name {
    font-weight: 800;
    font-size: 1.125rem;
    line-height: 24px;

    margin-left: 8px;
}

.user__username {
    font-size: 0.875rem;

    margin-left: 8px;
}

.close__cross {
    align-self: flex-start;

    margin-right: 12px;
}

.close__cross:hover {
    cursor: pointer;
}

.menu__separator {
    margin: 0;
    margin-top: 14px;

    border: 1px solid var(--menu-separator);
}

.menu__navigation-options {
    color: var(--primary-text-color);

    margin-left: 16px;
    margin-top: 18px;
}

.navigation-options__option:first-of-type {
    color: #5FE19B;
}

.navigation-options__option {
    font-weight: 700;
    font-size: 1.25rem;
    line-height: 27px;

    margin-bottom: 32px;
}

.navigation-options__option:hover {
    cursor: pointer;
}

.menu__bottom-section {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;

    color: var(--primary-text-color);
    font-size: 0.938rem;
    line-height: 20px;
}

.menu__bottom-section > p {
    height: 39px;
    display: flex;
    align-items: center;

    padding-left: 16px;
    margin-top: 12px;
    margin-bottom: 8px;
}

.menu__bottom-section > p:hover {
    cursor: pointer;
}

/*
    ##########################################################################

    HEADER STYLING.

    ##########################################################################
*/

header {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;

    height: 94px;

    display: flex;
    justify-content: space-between;
    align-items: center;

    background: linear-gradient(180deg, #5FE19B 0%, #36B972 50%, #0EA152 100%);
    box-shadow: 1px -3px 36px rgba(0, 0, 0, 0.5);
}

.logo__image {
    height: 34px;
    width: 267px;

    margin-left: 40px;
}

.menu__burguer {
    display: none;
}

.menu__burguer:hover {
    cursor: pointer;
}

.search {
    position: relative;

    background: #FFFFFF;
    border-radius: 4px;

    z-index: 10;

    margin-left: -136px;
}

.search__form {
    display: flex;
    align-items: center;
}

.search__button {
    margin: 15px 11px 14px 11px;

    border: 0;
    background-color: transparent;

    display: grid;
    place-content: center;
}

.search__button:hover {
    cursor: pointer;
}

.search__input {
    outline: none;
    border: 0;

    margin-right: 8px;
    padding-top: 3px;
    width: 280px;

    font-size: 0.938rem;
    color: #3D3D3D;
}

.search__icon-clear {
    visibility: hidden;
    margin-right: 11px;
    margin-top: 1px;
}

.search__icon-clear:hover {
    cursor: pointer;
}

.search__results {
    position: absolute;
    left: 0;
    right: 0;
    top: 55px;

    background-color: white;

    list-style: none;

    max-height: 210px;
    overflow-y: scroll;
}

.search__results::-webkit-scrollbar {
    width: 10px;
}

.search__results::-webkit-scrollbar-thumb {
    background: var(--card-bg);
    border: 1px solid black;
    border-radius: 20px;
}

.search__results-item {
    text-decoration: none;

    padding: 10px 34px 10px 14px;

    color: #3D3D3D;
}

.search__results-item:hover {
    cursor: pointer;
}

hr {
    border: 0.5px solid #E1E1E4;

    margin-left: 8px;
    margin-right: 8px;
}

.search__results-item:last-of-type {
    border: 0;
}

.user {
    margin-right: 40px;
}

.user__container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.user__log-out {
    text-decoration: none;
    color: white;
    margin-right: 16px;
    word-break: keep-all;

    width: 66px;
    text-align: right;
}

.user__img {
    width: 48px;
    height: 48px;
}
/* ... */

